# TreasureHuntSO

./: AvlTree.c  AvlTree.h  CMakeLists.txt  DirectoryLib.c  DirectoryLib.h  FileLib.c  FileLib.h  HubHelpers.c  HubHelpers.h  Log.c  Log.h  MonitorHelpers.c  MonitorHelpers.h  README.md  ScoreCalculator.c  Treasure.c  Treasure.h  TreasureHub.c  TreasureManager.c  main.c  makefile  operationHelpers.c  operationHelpers.h  treasureMonitor.c  treasureMonitor.h
